--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <li>Desarrollo en Java</li>
                 </ul>
                 <h2>LinkedIn</h2>
-                <a href="#" target="_blank">
+                <a href="https://www.linkedin.com/in/harold-sanchez-b52806357?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
                     <button>Ver mi LinkedIn</button>
                 </a>
             </div>
@@ -112,3 +112,4 @@
     </div>
 </body>
 </html>
+
